snapshots/care/data4life/hc-util-sdk-kmp/error/1.11.0-SNAPSHOT/error-1.11.0-20220426.153923-2.jar.sha1
260e2d8eae0fa9d769d7f6bac70b906a8b68bf00